# cbrn-ai-hackathon

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PIPELINE_TEST_RESULTS.md  README.md  RELEASING.md  cli.py  draft.md  environment.yml  nextsteps.md  overview.md  position_bias_working.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  statistical  test_data_pipeline.py  test_integration.bat
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.serena/: project.yml
benchmark-robustness-improver/: project-overview.md
cache/: cli-smoke-config.json  test_config_roundtrip.json  tmp.jsonl
coding-tasks/: module1.md  module2.md  module3.md  module4.md  module5.md  module6.md  modules-plan.md
configs/: README.md  default.json
data/: README.md  TOY_README.md  benign_pairs_sanitized.jsonl  registry.yaml  sample_sanitized.jsonl  toy_bio_eval.jsonl  wmdp_bio_robust_100.jsonl  wmdp_bio_sample_100.jsonl
docs/: ANNOTATION_GUIDE.md  ARCHITECTURE.md  COST_PLAN.md  LINT_CLEANUP_PLAN.md  PROMPTS_APPENDIX.md  README.md  RELEASE_CHECKLIST.md  REPORT.md  RESULTS_TEMPLATE.md  ROADMAP.md  ROBUSTNESS_PLAYBOOK.md  SAFETY.md  SECURITY_CONSIDERATIONS.md  SETUP_LAMBDA.md  USAGE.md  architecture.md  brief.md  conventions.md  development-setup.md  github-setup.md  hallucination-aware-evaluation.md  lambda_runbook.md  listofevals.md  prd.md  project-structure.md  prompts_appendix.md  release_checklist.md
docs/architecture/: appendix-critical-algorithms-documentation.md  architecture.md  caching-strategy.md  component-architecture.md  data-flow-architecture.md  deployment-and-distribution.md  determinism-controls.md  determinism-reproducibility.md  development-workflow.md  fail-graceful-architecture-patterns.md  high-level-architecture.md  index.md  introduction.md  memory-management-strategy.md  monitoring-and-observability.md  output-schemas.md  project-structure.md  (+7 more)
hackathon/: criteria.md
hackathon-context/: mainpage.md
logs_runner_smoke/: cloze_hf_logprob__hf-internal-testing-tiny-random-gpt2__seed123.json
results/: analysis_with_robust.json  degradation_final.json  test2_analysis.json  test2_degradation.json  test2_robust.json  test_analysis.json  test_heuristic.json
robustcbrn/: __init__.py  budget_guard.py  config.py  security.py
robustcbrn_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: INTEGRATION_GUIDE.md  PIPELINE_README.md  abstain_ci.py  aggregate_results.sh  build_permuted.py  configure-branch-protection.sh  discover_entry_points.sh  download_models.sh  eval_openai_mcq.py  fetch_data.py  fill_report.py  final_verification.sh  generate_figures.sh  generate_report.sh  heuristics.py  install-hooks.sh  platform_compat.sh  publish_logs.sh  remote_run_lambda.sh  run_all.sh  run_evalset.sh  run_full_evaluation.sh  run_pipeline.sh  run_robustness_suite.sh  run_robustness_suite_parallel.sh  run_sample.sh  run_sample_evaluation.sh  run_tests_and_security.sh  setup.bat  setup.ps1  setup.sh  setup_env.sh  test.sh  test_and_cleanup.py  utils.py  validate_install.py  validate_platform.sh  validate_release.sh  vote_consensus.py
src/: README.md  config.py
tasks/: bio_choicesonly.yaml  bio_cloze.yaml  bio_mc.yaml
tests/: README.md  conftest.py  mock_models.py  test_aflite.py  test_aggregate_cli_k.py  test_aggregate_heuristics_integration.py  test_aggregate_integration.py  test_aggregate_robustness_metrics.py  test_ambiguity.py  test_benign_pair_metrics.py  test_benign_pairs.py  test_bootstrap.py  test_calibration.py  test_cli_analyze.py  test_cli_integration.py  test_cli_smoke.py  test_cloze_hf.py  test_confidence_scoring.py  test_config.py  test_data_pipeline.py  test_data_pipeline_integration.py  test_data_safety.py  test_dataset_and_task.py  test_fetch_data.py  test_fill_report_script.py  test_formal_stats.py  test_heuristics.py  test_heuristics_summary.py  test_integration_module4.py  test_paraphrase_perturb.py  test_patterns.py  test_permutation.py  test_pipeline.py  test_position_bias.py  test_power_and_plots.py  test_projection_cli.py  test_rules.py  test_smoke.py  test_validate_dataset_cli.py  test_validate_release_allowlist.py  (+1 more)
workflows/: ci.yml
(+139 files in other folders)
