[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robustcbrn-eval"
version = "0.1.0"
description = "Robust evaluation pipeline on top of EleutherAI lm-evaluation-harness"
requires-python = ">=3.10"
dependencies = [
  "lm-eval>=0.4.0",
  "vllm>=0.5.0",
  "torch>=2.1",
  "numpy>=1.24",
  "pandas>=2.0",
  "typer>=0.9",
  "tqdm>=4.65",
  "scipy>=1.11",
  "jinja2>=3.1",
  "pyyaml>=6.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
